Bug 293908 - Quickbuild does not work
Summary: Quickbuild does not work
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-12 16:00 UTC by jgdb
Modified: 2012-02-13 21:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jgdb 2012-02-12 16:00:51 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                MS Windows

When I press the button "Quickbuild" nothing happens. If I repeat, appears "Unknown Tool" message
However, PDFLatex and ViewPDF works well. This only happens on my laptop and not in my PC

Reproducible: Always

Steps to Reproduce:
Click Quickbuild (button in Tools)

Actual Results:  
Nothing happens. If repeat, appears "Unknown Tool" message

Expected Results:  
Nothing

PDFLatex + ViewPDF. If I work directly with these buttons I obtain the PDF file in Okular
Comment 1 Michel Ludwig 2012-02-12 17:26:33 UTC
Have you tried to reset the tools?
Comment 2 jgdb 2012-02-12 23:05:02 UTC
(In reply to comment #1)
> Have you tried to reset the tools?

No. How can I do reset the tools?
Comment 3 Michel Ludwig 2012-02-13 09:01:32 UTC
Under Settings / Configure Kile... / Tools / Build / Restore Default Tools.

Could you try it out? Also, there you can configure what QuickBuild is supposed to do.
Comment 4 Tobias Vockerodt 2012-02-13 13:32:55 UTC
I can confirm this bug, using a fresh KDE 4.8.00 for Windows install and kile 2.9.60. Appearance is exactly the same. Repeatedly clicking on QuickBuilt results in a log message:
  [kile] Unknown Tool .

Resetting the tools to default does not help.

Any tool created with a "run sequence of tools" configuration is not working. However, the log message appears only for "QuickBuild".
Comment 5 jgdb 2012-02-13 16:23:52 UTC
(In reply to comment #3)
> Under Settings / Configure Kile... / Tools / Build / Restore Default Tools.
> 
> Could you try it out? Also, there you can configure what QuickBuild is supposed
> to do.

I does not work as confirmed by Tobias Vockerodt
Comment 6 Michel Ludwig 2012-02-13 21:20:30 UTC
Git commit a7e3f45a1f84288cec5e75dfbd24dda4882911ed by Michel Ludwig.
Committed on 13/02/2012 at 22:18.
Pushed by mludwig into branch 'master'.

Fix the creation of sequence tools

In particular, of QuickBuild.

M  +6    -1    src/kilestdtools.cpp
M  +33   -26   src/kiletool.cpp
M  +8    -6    src/kiletool.h

http://commits.kde.org/kile/a7e3f45a1f84288cec5e75dfbd24dda4882911ed
Comment 7 Michel Ludwig 2012-02-13 21:29:21 UTC
This was actually a general problem, i.e. not isolated to Windows.

I've also asked for a Windows package based on the 2.1 branch to be created, which might be less buggy.