Fix the creation of sequence tools

In particular, of QuickBuild.

BUG: 293908